--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -125,6 +125,7 @@
       "configFile": "config.js",
       "autoloads": [
         "src/model/Sideline.js",
+        "src/model/SidelineResource.js",
         "src/SidelineResourceGenerator.js",
         "src/ffmpg/SidelineMosaic.js"
       ],
