--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   "dependencies": {
     "adm-zip": "^0.4.9",
     "app-module-path": "^2.2.0",
+    "archiver": "^3.0.0",
     "dexie": "^2.0.4",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git",
     "file-metadata": "^1.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^7.0.1",
     "image-size": "^0.6.2",
     "node-fetch": "^2.2.0"
   },
