--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -125,9 +125,12 @@
       "configFile": "config.js",
       "autoloads": [
         "src/model/Sideline.js",
+        "src/model/SidelineReference.js",
         "src/model/SidelineResource.js",
         "src/SidelineResourceGenerator.js",
-        "src/ffmpg/SidelineMosaic.js"
+        "src/SidelineResourceService.js",
+        "src/ffmpg/SidelineMosaic.js",
+        "src/ffmpg/SidelineMosaic2.js"
       ],
       "autoloadWs": [],
       "widgets": [],
