--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -127,10 +127,11 @@
         "src/model/Sideline.js",
         "src/model/SidelineReference.js",
         "src/model/SidelineResource.js",
+        "src/model/SidelineMosaicWrapper.js",
+        "src/model/Mosaic.js",
         "src/SidelineResourceGenerator.js",
         "src/SidelineResourceService.js",
-        "src/ffmpg/SidelineMosaic.js",
-        "src/ffmpg/SidelineMosaic2.js"
+        "src/ffmpg/SidelineMosaic.js"
       ],
       "autoloadWs": [],
       "widgets": [],
