Fix sideline module

--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -5,9 +5,9 @@
   "localoStorage": {
     "namespace": "Dsign"
   },
-    "backup" : {
-        "path": "/home/bastoni/Videos/"
-    },
+  "backup" : {
+    "path": "/home/visa/Videos/"
+  },
   "tcpClient": {
     "port": 8002,
     "ip": "127.0.0.1"
@@ -130,8 +130,10 @@
         "src/model/Sideline.js",
         "src/model/SidelineReference.js",
         "src/model/SidelineResource.js",
-        "src/model/SidelineMosaicWrapper.js",
-        "src/model/Mosaic.js",
+        "src/model/mosaic/MonitorMosaicWrapper.js",
+        "src/model/mosaic/SidelineMosaicWrapper.js",
+        "src/model/mosaic/ResourceMosaic.js",
+        "src/model/mosaic/Mosaic.js",
         "src/SidelineResourceGenerator.js",
         "src/SidelineResourceService.js",
         "src/ffmpg/SidelineMosaic.js"
