--- a/app/plugin/resource/package.json
+++ b/app/plugin/resource/package.json
@@ -9,6 +9,7 @@
     "src/model/GenericFile.js",
     "src/model/Image.js",
     "src/model/Video.js",
-    "src/model/Audio.js"
+    "src/model/Audio.js",
+    "src/model/SourcePath.js"
   ]
 }
