--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -6,11 +6,14 @@
     "namespace": "Dsign"
   },
   "backup" : {
-    "path": "/home/visa/Videos/"
+      "path": "/home/bastoni/Videos/"
   },
   "tcpClient": {
     "port": 8002,
     "ip": "127.0.0.1"
+  },
+  "dashboard" : {
+      "atop" : true
   },
   "soccerApi": {
     "path": "https://sportsop-soccer-sports-open-data-v1.p.mashape.com/v1/",
@@ -63,8 +66,8 @@
         "src/model/Image.js",
         "src/model/Video.js",
         "src/model/Audio.js",
-        "src/model/LocationPath.js",
-        "src/model/SourcePath.js"
+        "src/model/SourcePath.js",
+        "src/model/LocationPath.js"
       ],
       "name": "resource"
     },
