--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -13,7 +13,7 @@
     "ip": "127.0.0.1"
   },
   "dashboard" : {
-      "atop" : true
+      "alwaysOnTop" : true
   },
   "soccerApi": {
     "path": "https://sportsop-soccer-sports-open-data-v1.p.mashape.com/v1/",
