--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ app/package-lock.json
 package-lock.json
 .nyc_output
 test/nyc
+bk.zip
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
