--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "bower": "^1.8.4",
     "chai": "*",
     "devtron": "^1.4.0",
-    "electron": "3.0.4",
-    "electron-builder": "~20.11.1",
+    "electron": "4.0.0",
+    "electron-builder": "^20.11.1",
     "mocha": "*",
     "nyc": "^11.7.1",
     "polymer-cli": "^1.9.4"
