Refactor video panel

--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -145,6 +145,8 @@
             },
             "configFile": "config.js",
             "autoloads": [
+                "src/model/Panel.js",
+                "src/model/VideoPanel.js",
                 "src/model/Sideline.js",
                 "src/model/SidelineReference.js",
                 "src/model/SidelineResource.js",
