--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -11,6 +11,7 @@
     "src/model/Video.js",
     "src/model/Audio.js",
     "src/model/SourcePath.js",
-    "src/model/LocationPath.js"
+    "src/model/LocationPath.js",
+    "src/model/ResourceReference.js"
   ]
 }
