--- a/app/module/media-device/package.json
+++ b/app/module/media-device/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "antonino visalli <antonino.visalli@gmail.com>",
   "description": "Dsign media device module",
-  "homepage": "www.visa4.it",
+  "homepage": "https://github.com/dsign",
   "config": "config.js",
   "autoloads": [
     "src/model/MediaDevice.js",
