--- a/app/module/playlist/package.json
+++ b/app/module/playlist/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "antonino visalli <antonino.visalli@gmail.com>",
   "description": "Dsign playlist plugin",
-  "homepage": "www.visa4.it",
+  "homepage": "https://github.com/dsign",
   "config": "config.js",
   "autoload": [
     "src/PlaylistService.js",
