--- a/app/module/dashboard/package.json
+++ b/app/module/dashboard/package.json
@@ -3,6 +3,6 @@
   "version": "0.1.0",
   "author": "antonino visalli <antonino.visalli@gmail.com>",
   "description": "Thor",
-  "homepage": "www.visa4.it",
+  "homepage": "https://github.com/dsign",
   "configFile": "config.js"
 }
