--- a/app/module/video-panel/package.json
+++ b/app/module/video-panel/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "antonino visalli <antonino.visalli@gmail.com>",
   "description": "Dsign video panel plugin",
-  "homepage": "www.visa4.it",
+  "homepage": "https://github.com/dsign",
   "customeStyle": {
     "color": " green"
   },
