--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -12,6 +12,7 @@
     "src/model/Audio.js",
     "src/model/SourcePath.js",
     "src/model/LocationPath.js",
-    "src/model/ResourceReference.js"
+    "src/model/ResourceReference.js",
+    "src/model/TimeslotReference.js"
   ]
 }
