--- a/app/module/timeline/package.json
+++ b/app/module/timeline/package.json
@@ -8,6 +8,7 @@
   "autoloads": [
     "src/model/Time.js",
     "src/model/Timeline.js",
-    "src/model/TimelineItem.js"
+    "src/model/TimelineItem.js",
+    "src/TimelineService.js"
   ]
 }
