--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "bower": "^1.8.4",
+    "bower": "^1.8.8",
     "chai": "*",
     "devtron": "^1.4.0",
     "electron": "4.0.0",
     "electron-builder": "^20.11.1",
     "mocha": "*",
     "nyc": "^11.7.1",
-    "polymer-cli": "^1.9.4"
+    "polymer-cli": "^1.9.6"
   },
   "scripts": {
     "postinstall": "install-app-deps",
@@ -38,7 +38,8 @@
     "file-metadata": "^1.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^7.0.1",
-    "image-size": "^0.6.2"
+    "image-size": "^0.6.2",
+    "node-fetch": "^2.3.0"
   },
   "nyc": {
     "reporter": [
