--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -132,7 +132,8 @@
             "configFile": "config.js",
             "autoloads": [
                 "src/PlaylistService.js",
-                "src/model/Playlist.js"
+                "src/model/Playlist.js",
+                "src/model/TimeslotPlaylistReference.js"
             ],
             "name": "playlist"
         },
