--- a/app/module/playlist/package.json
+++ b/app/module/playlist/package.json
@@ -7,6 +7,7 @@
   "config": "config.js",
   "autoload": [
     "src/PlaylistService.js",
-    "src/model/Playlist.js"
+    "src/model/Playlist.js",
+    "src/model/TimeslotPlaylistReference.js"
   ]
 }
