--- a/app/config/application.json.dist
+++ b/app/config/application.json.dist
@@ -58,7 +58,8 @@
             "autoloads": [
                 "src/model/Monitor.js",
                 "src/model/VirtualMonitor.js",
-                "src/model/VirtualMonitorReference.js"
+                "src/model/VirtualMonitorReference.js",
+                "src/MonitorService.js",
             ],
             "name": "monitor"
         },
