--- a/app/module/playlist/package.json
+++ b/app/module/playlist/package.json
@@ -8,6 +8,7 @@
   "autoload": [
     "src/PlaylistService.js",
     "src/model/Playlist.js",
+    "src/model/PlaylistReference.js",
     "src/model/TimeslotPlaylistReference.js"
   ]
 }
