--- a/app/config/config.json.dist
+++ b/app/config/config.json.dist
@@ -6,10 +6,15 @@
       "en"
     ]
   },
+  "sender" : {
+    "ipcProxy" : {
+        "proxyName" : "proxy"
+    }
+  },
   "storage" : {
      "adapter" : {
         "dexie" : {
-            "nameDb" : "test"
+            "nameDb" : "dsign"
         }
      }
   }
